<resources>
    <string name="app_name">My Application</string>
    <string name="drawer_open">Drawer open</string>
    <string name="drawer_close">Drawer close</string>
    <string name="domore">DoMore</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="association_name">שם העמותה</string>
    <string name="email">Email</string>
    <string name="add_acc">רשום עמותה</string>
    <string name="ffff">הדפס חינוך</string>
    <string name="phone">טלפון</string>
    <string name="password">סיסמה</string>
    <string name="signin">התחבר</string>
    <string name="register">הירשם</string>
    <string name="associationname">שם העמותה</string>
    <string name="signinl">התחבר</string>
    <string name="whatkind">איזה חשבון תרצה לפתוח?</string>
    <string name="menasso">מנהל עמותה</string>
    <string name="vulo">מתנדב</string>
    <string name="fullpersonname">שם מלא</string>
    <string name="regv">רשום מתנדב</string>
    <string name="wywtd">מה ברצונך לעשות?</string>
    <string name="searvo">חיפוש התנדבות</string>
    <string name="editde">עריכת פרטי חשבון</string>
    <string name="addvo">הוספת התנדבות</string>
    <string name="myvol">ההתנדבויות שלי</string>
    <string name="wyawtd">מה ברצונכם לעשות?</string>
    <string name="null_date">--/--/--    --:--</string>
    <string-array name="association_category">
        <item>בחר קטגוריה</item>
        <item>חלוקת מזון</item>
        <item>קשישים</item>
        <item>חינוך</item>
        <item>צרכים מיוחדים</item>
        <item>עולים חדשים</item>
        <item>חולים</item>
        <item>אחר</item>

    </string-array>
</resources>