<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <EditText
        android:id="@+id/editTextAsssociationName"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text=""
        android:hint="@string/associationname"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.135" />

    <Spinner
        android:id="@+id/planets_spinner"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:drawSelectorOnTop="true"
        android:entries="@array/association_category"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.235" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.332" />

    <Button
        android:id="@+id/acc"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:text="@string/add_acc"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.75" />

    <EditText
        android:id="@+id/editTextPhone"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:ems="10"
        android:hint="@string/phone"
        android:gravity="right"
        android:inputType="phone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.428" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:gravity="right"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.524" />

    <EditText
        android:id="@+id/editTextTextPassword2"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:ems="10"
        android:gravity="right"
        android:hint="אימות סיסמה"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.625" />

</androidx.constraintlayout.widget.ConstraintLayout>