<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back1"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/white"
        app:backgroundTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.332" />

    <Button
        android:id="@+id/acc"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:text="@string/signinl"
        android:backgroundTint="@color/white"
        android:textColor="#030F5C"
        android:textStyle="bold"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.467"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.629" />


    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColorHint="@color/white"
        app:backgroundTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.452" />

</androidx.constraintlayout.widget.ConstraintLayout>