<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <EditText
        android:id="@+id/editTextAsssociationName"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text=""
        android:hint="@string/associationname"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.121" />

    <Spinner
        android:id="@+id/planets_spinner"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:drawSelectorOnTop="true"
        android:entries="@array/association_category"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.235" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.332" />

    <!--    <Button-->
<!--        android:id="@+id/acc2"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="@string/ffff"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="0.584"-->
<!--        app:layout_constraintLeft_toLeftOf="parent"-->
<!--        app:layout_constraintRight_toRightOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        app:layout_constraintVertical_bias="0.904" />-->

    <Button
        android:id="@+id/acc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_acc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.467"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.629" />

    <EditText
        android:id="@+id/editTextPhone"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:ems="10"
        android:hint="@string/phone"
        android:inputType="phone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.428" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.524" />

<!--    <LinearLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:orientation="horizontal"-->
<!--        tools:ignore="MissingConstraints"-->
<!--        tools:layout_editor_absoluteX="0dp"-->
<!--        tools:layout_editor_absoluteY="427dp">-->

<!--    </LinearLayout>-->

<!--    <TextView-->
<!--        android:id="@+id/login_instructions"-->

<!--        android:layout_width="280dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="Your password must be at least 8 characters. With at least 1 number and 1 special character"-->
<!--        tools:ignore="MissingConstraints"-->
<!--        tools:layout_editor_absoluteX="65dp"-->
<!--        tools:layout_editor_absoluteY="454dp" />-->

<!--    <ProgressBar-->
<!--        android:id="@+id/progressBar"-->
<!--        style="?android:attr/progressBarStyleHorizontal"-->
<!--        android:layout_width="280dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_weight="1"-->
<!--        android:indeterminate="false"-->
<!--        android:maxHeight="20dip"-->
<!--        android:minHeight="20dip"-->
<!--        android:progress="0"-->
<!--        tools:ignore="MissingConstraints"-->
<!--        tools:layout_editor_absoluteX="65dp"-->
<!--        tools:layout_editor_absoluteY="407dp" />-->

<!--    <TextView-->
<!--        android:id="@+id/password_strength"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:gravity="center_horizontal"-->
<!--        android:text="Weak"-->
<!--        tools:layout_editor_absoluteX="304dp"-->
<!--        tools:layout_editor_absoluteY="430dp"-->
<!--        tools:ignore="MissingConstraints" />-->
</androidx.constraintlayout.widget.ConstraintLayout>