<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back1"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/volunteerName"
        android:layout_width="290dp"
        android:layout_height="100dp"
        android:textColor="@color/white"
        android:textSize="32sp"
        android:textStyle="bold"
        android:gravity="center"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.172" />
    <TextView
        android:id="@+id/whatdo"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:textColor="@color/white"
        android:textSize="26sp"
        android:text="@string/wyawtd"
        android:textStyle="bold"
        android:gravity="center"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4" />


    <Button
        android:id="@+id/addvo"
        android:layout_width="220dp"
        android:layout_height="60dp"
        android:text="@string/addvo"
        android:backgroundTint="@color/white"
        android:textColor="#174300"
        android:textStyle="bold"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.50"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.58" />
    <Button
        android:id="@+id/editvo"
        android:layout_width="220dp"
        android:layout_height="60dp"
        android:text="@string/editvo"
        android:backgroundTint="@color/white"
        android:textColor="#730000"
        android:textStyle="bold"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.50"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.68" />
    <Button
        android:id="@+id/editde"
        android:layout_width="220dp"
        android:layout_height="60dp"
        android:text="@string/editde"
        android:backgroundTint="@color/white"
        android:textColor="#151000"
        android:textStyle="bold"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.50"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.78" />

</androidx.constraintlayout.widget.ConstraintLayout>