<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back1"
    tools:context=".activitiy.HomeVolunteerActivity"
    android:layoutDirection="rtl">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <TextView
        android:id="@+id/volunteerName"
        android:layout_width="290dp"
        android:layout_height="100dp"
        android:textColor="@color/white"
        android:textSize="36sp"
        android:gravity="center"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.172" />

    <TextView
        android:id="@+id/whatdo"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:textColor="@color/white"
        android:textSize="28sp"
        android:text="@string/wywtd"
        android:gravity="center"
        android:fontFamily="@font/secular"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4" />

    <Button
        android:id="@+id/searvo"
        android:layout_width="220dp"
        android:layout_height="60dp"
        android:backgroundTint="@color/white"
        android:text="@string/searvo"
        android:textColor="#5E2C11"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.6" />

    <Button
        android:id="@+id/vh_myvol"
        android:layout_width="220dp"
        android:layout_height="60dp"
        android:backgroundTint="@color/white"
        android:text="ההתנדבויות שלי"
        android:textColor="#5E111D"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.7" />

    <Button
        android:id="@+id/editde"
        android:layout_width="220dp"
        android:layout_height="60dp"
        android:text="@string/editde"
        android:backgroundTint="@color/white"
        android:textColor="#151000"
        android:textStyle="bold"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.50"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.8" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</LinearLayout>
